fix: z-index issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -260,3 +260,7 @@ input[type="search" i]::-webkit-search-cancel-button {
 .type-icon-selected path {
   @apply fill-black stroke-black dark:fill-white dark:stroke-white;
 }
+
+.woot--bubble-holder > .woot-widget-bubble {
+  z-index: 49 !important
+}
